2004-09-16  Karl Lehenbauer  <karl@sc.com>

	* src/configure.tcl: If a configuration variable in
	  tclConfig.sh ever had an equal sign in the "value"
	  portion of the key=value pair, configure.tcl would
	  malfunction.

	  A missing variable caused a variable referencing that
	  missing variable to be silently dropped.  We now
	  complain, although the right answer is probably to
	  substitute an empty string for all missing variables.
	  Still, this way at least gives a hint as to the problem.

	* src/Makefile: Add simple rules for "clean", "distclean",
	and "install" that simply invoke make.tcl appropriately.

2004-08-07  David N. Welton  <davidw@dedasys.com>

	* rivet/packages/dtcl/dtcl.tcl (hgetvars): Added code from Arnulf
	Wiedemann <arnulf@wiedemann-pri.de> to set up VARS array.

2004-08-03  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/Rivet.nsi: Added a NSIS script. This is used with the
	Nullsoft scriptable installer system to create an installer for
	Rivet to install onto a Windows system.
	* win/makefile.vc: Added htmlhelp and installer targets.

2004-06-25  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* src/rivetCrypt.c: Fix const-ness of resultBuffer to match 
	apache's crypt function.
	* win/makefile.vc: Fixed the version string to match rivet project
	version. Support use of MSVC.NET or VC++Toolkit compilers.

2004-06-04  David N. Welton  <davidw@dedasys.com>

	* contrib/two-mode-mode.el: Updated two-mode-mode.

2004-06-02  David N. Welton  <davidw@dedasys.com>

	* src/buildscripts/aardvark.tcl: Use 'Output' instead of puts.  It
	might be useful were we ever to do something like make an aardvark
	GUI.

2004-06-01  David N. Welton  <davidw@dedasys.com>

	* Following changes by Pat Thoyts  <patthoyts@users.sourceforge.net>:
	* win/makefile.vc: Updated to deal with the START_TAG END_TAG
	macros.
	* src/rivetParser.h: Declare missing prototype.
	* tests/binary.rvt: The stdout channel under Windows needs to be